odd players/bugs